[Feature branch] Notification (#4513)
* [Feature Notification] Add EuiNotificationEventMeta (#4433)

* Add notification event meta

* WIP

* adding i18n

* Fixing axe error in docs example

* Adding context menus items

* contetx menu item anchor position

* Adding tests

* Update src/components/notification/notification_event_meta.tsx

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Improving code based on PR review

* More PR review

* Better description

* Update src/components/notification/notification_event_meta.tsx

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Update src-docs/src/views/notification_events/notification_events.js

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Badge 100% width

* ES lint

* Read and unread states

* Make sure overflow menu stays in the top right

* Improving a11y

* Adding playground for event read button

* Removing EuiNotificationEventMeta from exported on index

* Add a behavior unit test, update context menu test to snapshot the menu items

* Update src/components/notification/notification_event_meta.tsx

Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

* Update src/components/notification/notification_event_read_button.tsx

Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>
Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

* [Feature Notification] Adding animation prop to EuiHeaderSectionItemButton (#4424)

* Adding animation and hasBackground props to EuiHeaderSectionItemButton

* A few improvements

* Docs props

* Removing hasBackground prop

* Using JS do hide and show on xs breakpoints

* Adding a snippet

* refactor animation prop into a ref method

* Snapshots. Trigger animation comments.

* Deleting unused css animation

* triggerAnimation explanation

* Cle

--- a/src/components/header/_mixins.scss
+++ b/src/components/header/_mixins.scss
@@ -4,7 +4,7 @@
 
   .euiHeaderLogo__text,
   .euiHeaderLink,
-  .euiHeaderSectionItem__button {
+  .euiHeaderSectionItemButton {
     color: $euiColorGhost;
   }
 
@@ -20,9 +20,13 @@
 
   .euiHeaderLogo,
   .euiHeaderLink,
-  .euiHeaderSectionItem__button {
+  .euiHeaderSectionItemButton {
+    &:hover {
+      background: transparentize(lightOrDarkTheme($euiColorDarkShade, $euiColorLightestShade), .5);
+    }
+
     &:focus {
-      background-color: transparentize(lightOrDarkTheme($euiColorDarkShade, $euiColorLightestShade), .5);
+      background: shade($euiColorPrimary, 50%);
     }
   }
 
