--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -44,6 +44,7 @@
 @import 'markdown_editor/index';
 @import 'mark/index';
 @import 'modal/index';
+@import 'notification/index';
 @import 'overlay_mask/index';
 @import 'pagination/index';
 @import 'panel/index';
