--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -156,6 +156,7 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
 
 .guideDemo__ghostBackground {
   @if (lightness($euiTextColor) < 50) {
+    color: $euiColorGhost;
     background: $euiColorDarkestShade !important; // Override EuiPanel specificity
   }
 }
