Added and implemented textTransform property under schemaDetectors prop in EuiDataGrid (#4753)
* Added and implemented  property under schemaDetectors prop in EuiDataGrid

* Minor update in changelog

* Removed boolean css class and modified description of prop

* shifted style to grid-body

* minor changelog correction

* removed console-log

* merge conflict resolve

* Merge conflict resolve

* merging usptream

* Resolved merge conflict

* made textTrasform capital

* Updated changelog

--- a/src/components/datagrid/_data_grid_data_row.scss
+++ b/src/components/datagrid/_data_grid_data_row.scss
@@ -98,8 +98,15 @@
     text-align: right;
   }
 
+  &.euiDataGridRowCell--uppercase {
+    text-transform: uppercase;
+  }
 
-  &.euiDataGridRowCell--boolean {
+  &.euiDataGridRowCell--lowercase {
+    text-transform: lowercase;
+  }
+
+  &.euiDataGridRowCell--capitalize {
     text-transform: capitalize;
   }
 
