Expand EuiFlyout usage to help EuiCollapsibleNav (#4713)
* Fix when animation happens with docked navs
* Conditionally render children of EuiCollapsibleNavGroup
* [BREAKING] Width of EuiCollapsibleNav is now add via `style` prop instead of Sass
* [EuiFlyout] Extending `size` prop to accept width types
  - Also does a better job with mobile sizing and not just overtaking the whole screen all the time
* [EuiFlyout] Added `side` prop
* [EuiFlyout] added `type=push`, `pushBreakpoint` and `outsideClickCloses` props
* [EuiFlyout] Added `as` prop
* [BREAKING] Update EuiCollapsibleNav to use EuiFlyout
* Added `closeButton` and `closeButtonPosition` to EuiFlyout and using ‘outside’ but default in EuiCollabsibleNav
* Fixing up EuiCallapsibleNav with docking of EuiFlyout
* [Breaking] EuiFlyout defaults to `ownFocus = true`
* [EuiFlyout] Wrapping in EuiPortal when `ownFocus=true`
* Fixing z-indexes of flyouts compared to header
  - Basically always wrap in a port (or mask) unless pushed. Then shift the mask below header with `top` instead of z-index.
* Fixing visible focus ring on overflowing content like in flyouts
* Changing EuiFlyout `tabindex=0` to `-1`

--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -211,7 +211,7 @@ $elasticLogoTextDark: #1C1E23;
   height: 100%;
   left: 0;
   top: 0;
-  z-index: $euiZHeader + 1;
+  z-index: $euiZHeader;
   overflow: auto;
 
   &--withHeader {
