--- a/src/components/page/page_body/_page_body.scss
+++ b/src/components/page/page_body/_page_body.scss
@@ -7,6 +7,7 @@
   // Make sure that inner flex layouts don't get larger than this container
   max-width: 100%;
   min-width: 0;
+  z-index: 1; // Ensures any side nav emphasis gets rendered under shadow
 
   // Assumes that in the default theme, the borders are touching the edge of the EuiPage so remove them.
   &.euiPageBody--borderRadiusNone { // Nested for specificity
