[EuiColorStops] Fixed outline flashing when clicking or adding a stop (#4900)
* Improved focus state

* Adding CL

* Adding CL number

* More perfomant transition

* box shadow transition for euiRangeTrack::after

--- a/src/themes/eui-amsterdam/overrides/_color_stops.scss
+++ b/src/themes/eui-amsterdam/overrides/_color_stops.scss
@@ -26,13 +26,27 @@
 }
 
 .euiColorStops:not(.euiColorStops-isDisabled) {
-  &:focus {
-    // prevents a flash of the outline in Safari
+  .euiRangeTrack::after {
+    transition-property: box-shadow;
+    // this `transition-delay` prevents Safari of adding the focus ring (box-shadow) every time we click the `EuiColorStops`
+    // the focus still appear when we drag a color stop in Safari
     transition-delay: $euiAnimSpeedExtraFast;
   }
 
-  &:focus:not(:focus-visible) {
+  &:focus {
     outline: none;
+
+    .euiRangeTrack::after {
+      // sass-lint:disable-block no-color-literals
+      box-shadow: 0 0 0 1px rgba($euiColorEmptyShade, .8),
+      0 0 0 3px $euiFocusRingColor;
+    }
+  }
+
+  &:focus:not(:focus-visible) {
+    .euiRangeTrack::after {
+      box-shadow: none;
+    }
   }
 }
 
