--- a/src/components/datagrid/_data_grid_data_row.scss
+++ b/src/components/datagrid/_data_grid_data_row.scss
@@ -138,10 +138,20 @@
 .euiDataGridRowCell__expandFlex {
   display: flex;
   align-items: center;
+  height: 100%;
 }
 
 .euiDataGridRowCell__expandContent {
   flex-grow: 1;
+}
+
+.euiDataGridRowCell__contentByHeight {
+  flex-grow: 1;
+  height: 100%;
+}
+
+.euiDataGridRowCell__alignBaseLine {
+  align-items: baseline;
 }
 
 .euiDataGridRowCell__expandButton {
@@ -216,10 +226,18 @@
   }
 }
 
+.euiDataGridRowCell--fontSizeSmall {
+  @include euiFontSizeXS;
+}
+
 @include euiDataGridStyles(fontSizeLarge) {
   @include euiDataGridRowCell {
     @include euiFontSize;
   }
+}
+
+.euiDataGridRowCell--fontSizeLarge {
+  @include euiFontSize;
 }
 
 // Padding alternates
@@ -234,6 +252,10 @@
   }
 }
 
+.euiDataGridRowCell--paddingSmall {
+  padding: $euiDataGridCellPaddingS;
+}
+
 @include euiDataGridStyles(paddingLarge) {
   @include euiDataGridRowCell {
     padding: $euiDataGridCellPaddingL;
@@ -243,6 +265,10 @@
       padding-left: $euiDataGridCellPaddingL - 1px;
     }
   }
+}
+
+.euiDataGridRowCell--paddingLarge {
+  padding: $euiDataGridCellPaddingL;
 }
 
 @keyframes euiDataGridCellButtonSlideIn {
