[EuiCardSelect] Fix background and border-radius in button (#4954)

--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -3,6 +3,7 @@
 @import 'button_empty';
 @import 'button_group';
 @import 'call_out';
+@import 'card';
 @import 'code_block';
 @import 'color_stops';
 @import 'comment';
