[EuiKeyPadMenuItem] Added `checkable` option & style updates (#4950)
* [EuiKeyPadMenuItem] Added `isSelected` and fixed a few interactive and a11y props/elements
* Adding styles for Amsterdam version
* [EuiKeyPadMenuItem] Added `checkable`
* Cleaning up the beta badge and more docs
* [EuiKeyPadMenu] fieldset options to be added via a `checkable` prop

--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -16,6 +16,7 @@
 @import 'hue';
 @import 'list_group_item';
 @import 'image';
+@import 'key_pad_menu';
 @import 'mark';
 @import 'markdown_editor';
 @import 'modal';
