[EuiLink] Amsterdam style boost and docs cleanup (#4979)
* [EuiLink] Increased font weight to match buttons
  - Increased text underline weight on focus
  - Removed low-contrast focus background
  - Added `:visited` and `:target` styling
(All mainly affecting Amsterdam)
* Re-use mixin in text styles

--- a/src/components/text/_text.scss
+++ b/src/components/text/_text.scss
@@ -172,18 +172,7 @@
   // Style anchors that don't have a class. This prevents overwriting "buttons"
   // and other stylized elements passed in.
   a:not([class]) {
-    color: $euiLinkColor;
-
-    &:hover,
-    &:focus {
-      color: darken($euiLinkColor, 10%);
-      text-decoration: underline;
-    }
-
-    &:focus {
-      @include euiFocusBackground($euiLinkColor);
-      @include euiFocusRing;
-    }
+    @include euiLink;
   }
 
   img {
