[EuiSuperDatePicker] & [EuiButtonIcon] A couple quick fixes (#5060)
* [EuiSuperDatePicker] Fix width of inline calendar
* [EuiButtonIcon] Account for `disabled` prop
  - Which in turn fixes EuiPagination left/right arrows, and EuiListGroupItem extra action
* [EuiSuperDatePicker] Fixed responsive sizes of inline date picker

--- a/src/themes/eui-amsterdam/global_styling/react_date_picker/_date_picker_times.scss
+++ b/src/themes/eui-amsterdam/global_styling/react_date_picker/_date_picker_times.scss
@@ -26,6 +26,10 @@
       text-decoration: underline;
     }
   }
+
+  @include euiBreakpoint('xs') {
+    margin-top: 0;
+  }
 }
 
 .react-datepicker__time,
