--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -9,6 +9,7 @@
 @import 'color_stops';
 @import 'comment';
 @import 'date_picker';
+@import 'facet';
 @import 'filter_group';
 @import 'form_control_layout';
 @import 'form_control_layout_delimited';
@@ -22,6 +23,7 @@
 @import 'mark';
 @import 'markdown_editor';
 @import 'modal';
+@import 'notification_badge';
 @import 'overlay_mask';
 @import 'popover';
 @import 'progress';
