--- a/src-docs/src/components/guide_section/_guide_section.scss
+++ b/src-docs/src/components/guide_section/_guide_section.scss
@@ -10,8 +10,7 @@
 }
 
 .guideSection__propsTableIntro {
-  padding-left: $euiSizeS;
-  padding-right: $euiSizeS;
+  padding: $euiSizeM $euiSizeS 0;
 }
 
 .guideSectionExampleCode__link {
