--- a/src-docs/src/components/guide_section/_guide_section.scss
+++ b/src-docs/src/components/guide_section/_guide_section.scss
@@ -27,7 +27,7 @@
   }
 }
 
-.guideSectionTabs__tab {
+.guideSectionTabs__tab > * {
   font-weight: $euiFontWeightMedium !important; // sass-lint:disable-line no-important
 }
 
