[Amsterdam] Fixed EuiButtonGroup's border-radius and font-weight, and Fixed EuiButton's text color for text colors (#5177)
* [EuiButtonGroup] Fixed border-radius and font-weight for Amsterdam theme
* [EuiButton] Use text color for text colored buttons

--- a/src/themes/eui-amsterdam/overrides/_button.scss
+++ b/src/themes/eui-amsterdam/overrides/_button.scss
@@ -44,6 +44,9 @@
       // Ghost is unique and ALWAYS sits against a dark background.
       $backgroundColorSimulated: mix($euiColorInk, $color, 70%);
       color: makeHighContrastColor($color, $backgroundColorSimulated);
+    } @else if ($name == 'text') {
+      // The default color is lighter than the normal text color, make it the text color
+      color: $euiTextColor;
     } @else {
       &.euiButton--fill:focus {
         outline-color: lightOrDarkTheme($euiColorInk, $euiColorGhost);
@@ -83,6 +86,9 @@
       // Ghost is unique and ALWAYS sits against a dark background.
       $backgroundColorSimulated: mix($euiColorInk, $color, 70%);
       color: makeHighContrastColor($color, $backgroundColorSimulated);
+    } @else if ($name == 'text') {
+      // The default color is lighter than the normal text color, make it the text color
+      color: $euiTextColor;
     } @else {
       &.euiButtonIcon--fill:focus {
         outline-color: lightOrDarkTheme($euiColorInk, $euiColorGhost);
