[EuiDataGrid] Auto-fit rows to content (#4958)
* Add auto height possibility to row

* Fix eslint

* Fix some problems with hiding column

* Fix example

* Fix example

* fix calculation height so that work for images and fix problems with font

* Fix tests

* fix eslint

* fix some problems

* use resizeObserver instead of handling height in didMount method

* Fix some remarks

* fix some problems with shrinking

* Fix scrolling

* Some performance improvements

* use callback ref for setting grid in rowHeigthsUtils instead of useEffect

* Add new properties

* add changelog

* Fix lint

* convert autoheight example to TS

* With data

* examples cleanup

* Some fixes

* Add virtualizationOptions

* Improve performance

* Fix useEffect

* Fix tests

* Fix lint

* Remove unnecessary changes

* Remove unnecessary changes

* Fix tests

* Cleaned up lastUpdatedRow a bit

* example cleanup

* Fix lint

* DRY out mock rowHeightUtils

- instead of repeating various objs/fns across multiple files
- change static fns to jest mocks, in case we need to override their values later on a per-test basis

* [EuiGridCell] Refactor + write test for new componentDidUpdate logic

- Pull into separate class fn for readability, since the logic isn't using prevProps but is just running on evry update

- destructure for readability
- declare vars for if condition readability

* [EuiGridCell] PR feedback: destructure props for readability

* fix nit's

* Making datagrid matching the top snippet and improving demo

* Fixing comments line

* Removing HTML code

* New section title

* Small logic optimization

* Improving texts

* Renaming files and improving "fixed heights rows" demo

* Better text :D

* Text again

* Correctly identify the row heights page in the a11y test skipping

* Small copy cleanup

* small example cleanup

* Fix calculating defaultHeight after using density

* U

--- a/src/components/datagrid/_data_grid_data_row.scss
+++ b/src/components/datagrid/_data_grid_data_row.scss
@@ -104,6 +104,11 @@
     text-transform: capitalize;
   }
 
+  .euiDataGridRowCell__definedHeight {
+    @include euiTextBreakWord;
+    flex-grow: 1;
+  }
+
   // We only truncate if the cell is not a control column.
   &:not(.euiDataGridRowCell--controlColumn) {
     .euiDataGridRowCell__content,
