[EuiScreenReaderOnly] Revert left positioning change (#5215)
* Revert left positioning change

- due to issues with Kibana Selenium functional tests

* [optional] Preserve external link left: 0 behavior

- It's unlikely those have Selenium text assertions on them in Kibana, so this is probably(?) safe

* Add changelog entry

--- a/src/components/link/_link.scss
+++ b/src/components/link/_link.scss
@@ -4,6 +4,10 @@
   &[target='_blank'] {
     // Make the screen reader only text positioned relatively against the link itself
     position: relative;
+
+    .euiScreenReaderOnly {
+      left: 0;
+    }
   }
 
   .euiLink__externalIcon {
