[EuiTour] Style and a11y fixes (#5225)
* [EuiTour] Made `subtitle` optional and fixed footer background
* [Breaking] Removes boolean as an option for `minWidth`
  And instead maps directly to `CSSProperties[‘minWidth’]` and applies it directly to `panelStyle`.
  Also adds `maxWidth` option.
* Better tests and switching to `h2` when no `subtitle`

--- a/src/components/tour/_tour.scss
+++ b/src/components/tour/_tour.scss
@@ -1,26 +1,21 @@
-.euiTour--minWidth-default {
-  min-width: $euiSizeL * 10;
-}
-
 .euiTourHeader {
   border-bottom: none;
   // Overriding default `EuiPopoverTitle` styles
   margin-bottom: $euiSizeS !important; // sass-lint:disable-line no-important
 
-
   .euiTourHeader__title { // nested for additional specificity to override EuiTitle styles
+    // Removes extra margin applied to siblint EuiTitle's
     margin-top: 0;
   }
 }
 
 .euiTourHeader__subtitle {
-  color: $euiColorDarkShade;
+  color: $euiTextSubduedColor;
 }
 
 .euiTourFooter {
-  background-color: $euiColorLightestShade;
-  // Overriding default `EuiPopoverFooter` styles
-  margin-top: $euiSizeL !important; // sass-lint:disable-line no-important
+  background-color: $euiPageBackgroundColor;
+  border-radius: 0 0 $euiBorderRadius $euiBorderRadius;
 }
 
 .euiTour {
