[Docs] Add ThemeLanguages and new Breakpoints page (#5227)
* Added a ThemeSelector for optionally showing/changing content based on JS or Sass theming language
* Added some theme helper components like alert banners, values table, and example row
* [Manual] Copied the outputs json version of Sass for easier consumption in docs rather that sass-loader
* Rearranging sidenav to promote Theme section and adding “Breakpoints”
* Fixed some routing and notices

--- a/src-docs/src/views/guidelines/_index.scss
+++ b/src-docs/src/views/guidelines/_index.scss
@@ -286,10 +286,6 @@
   transition-duration: $euiAnimSpeedSlow;
 }
 
-.guideSass__breakpointExample {
-  padding: $euiSize;
-  color: $euiColorGhost;
-}
 
 .guideSass__themedBox {
   padding: $euiSize;
@@ -331,52 +327,12 @@
 
 @import 'colors/color_section';
 
-@include euiBreakpoint('xl') {
-  .guideSass__breakpointExample {
-    background: $euiColorPrimary;
+@each $key, $size in $euiBreakpoints {
+  .guideSass__breakpoint--#{$key} {
+    display: none;
 
-    &:before {
-      content: 'You are currently in the xl breakpoint';
-    }
-  }
-}
-
-@include euiBreakpoint('l') {
-  .guideSass__breakpointExample {
-    background: $euiColorSecondary;
-
-    &:before {
-      content: 'You are currently in the l breakpoint';
-    }
-  }
-}
-
-@include euiBreakpoint('m') {
-  .guideSass__breakpointExample {
-    background: $euiColorAccent;
-
-    &:before {
-      content: 'You are currently in the m breakpoint';
-    }
-  }
-}
-
-@include euiBreakpoint('s') {
-  .guideSass__breakpointExample {
-    background: $euiColorWarning;
-
-    &:before {
-      content: 'You are currently in the s breakpoint';
-    }
-  }
-}
-
-@include euiBreakpoint('xs') {
-  .guideSass__breakpointExample {
-    background: $euiColorDanger;
-
-    &:before {
-      content: 'You are currently in the xs breakpoint';
+    @include euiBreakpoint($key) {
+      display: block;
     }
   }
 }
