--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -7,6 +7,7 @@
 @import 'card';
 @import 'code_block';
 @import 'color_stops';
+@import 'combo_box';
 @import 'comment';
 @import 'date_picker';
 @import 'date_popover_button';
