[Docs] Separated out Borders to its own page & [EuiTableRowCell] fixes (#5283)
* Moved Border tokens to its own page
* Figured out a way to get subsections in the sidenav working
* Added the new `_values` under `customizing/`

* [EuiTableRowCell] Actually support `valign` property manually
* [EuiTable*] Fixing some props and mobile options
* Slightly better responsive table styles

--- a/src-docs/src/views/guidelines/_index.scss
+++ b/src-docs/src/views/guidelines/_index.scss
@@ -193,26 +193,32 @@
   padding: $euiSize;
 }
 
-.guideSass__border--radius {
+.guideSass__border--euiBorderRadius {
   border: $euiBorderThin;
   border-radius: $euiBorderRadius;
 }
 
-.guideSass__border--radiusSmall {
+.guideSass__border--euiBorderRadiusSmall {
   border: $euiBorderThin;
   border-radius: $euiBorderRadiusSmall;
 }
 
+.guideSass__border--euiBorderWidthThin,
 .guideSass__border--euiBorderThin {
   border: $euiBorderThin;
 }
 
+.guideSass__border--euiBorderWidthThick,
 .guideSass__border--euiBorderThick {
   border: $euiBorderThick;
 }
 
 .guideSass__border--euiBorderEditable {
   border: $euiBorderEditable;
+}
+
+.guideSass__border--thickDashed {
+  border: $euiBorderWidthThick dashed $euiBorderColor;
 }
 
 .guideSass__fontFamily {
