--- a/src/components/table/_responsive.scss
+++ b/src/components/table/_responsive.scss
@@ -49,7 +49,7 @@
     }
 
     .euiTableRowCell--enlargeForMobile {
-      @include euiFontSize;
+      @include euiFontSizeM;
     }
 
     .euiTableRowCell--isMobileFullWidth {
