[Docs] Separated out Typography to its own page (#5300)
* Added Typography page
* Deleting all old Sass typography

--- a/src-docs/src/views/guidelines/_index.scss
+++ b/src-docs/src/views/guidelines/_index.scss
@@ -230,9 +230,43 @@
   line-height: $euiSizeXL;
   color: $euiColorEmptyShade;
 
+  &--sans {
+    @include euiFont;
+  }
+
   &--code {
     @include euiCodeFont;
   }
+}
+
+.guideSass__mixin {
+  &--euiFont {
+    @include euiFont;
+  }
+
+  &--euiCodeFont {
+    @include euiCodeFont;
+  }
+
+  &--euiText {
+    @include euiText;
+  }
+
+  &--euiTitle {
+    @include euiTitle('s')
+  }
+
+  &--fontSize {
+    @include fontSize(19px)
+  }
+}
+
+.guideSass__fontSizeL {
+  @include euiFontSizeL;
+}
+
+.guideSass__fontFeatureSettings {
+  font-feature-settings: $euiFontFeatureSettings;
 }
 
 .guideSass__animRow + .guideSass__animRow {
