--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -9,6 +9,7 @@
 @import 'color_stops';
 @import 'combo_box';
 @import 'comment';
+@import 'data_grid';
 @import 'date_picker';
 @import 'date_popover_button';
 @import 'facet';
