[Docs] Add new "Theming / Sizing" page (#5326)
* Added Sizing page
* Add subsections and use new _values
* Deleting all old Sass typography
* Added callout in Sass page and easier customization of ValuesTable columns
* Cleanup including adding `valign` as a top level configuration

--- a/src-docs/src/views/guidelines/_index.scss
+++ b/src-docs/src/views/guidelines/_index.scss
@@ -93,18 +93,24 @@
   height: $euiSize;
 }
 
-.guideSass__sizeRow + .guideSass__sizeRow {
-  margin-top: $euiSize;
-}
-
 .guideSass__size {
   background-color: $euiColorFullShade;
   display: inline-block;
 }
 
-.guideSass__sizeItem {
-  width: $euiSizeXXL;
-  text-align: right;
+.guideSass__euiSize {
+  padding: $euiSize;
+  background-color: $euiColorHighlight;
+}
+
+.guideSass__euiSizeXS2 {
+  padding: $euiSizeXS / 2;
+  background-color: $euiColorHighlight;
+
+  &::after {
+    content: 'padding: #{$euiSizeXS / 2}';
+    font-weight: $euiFontWeightBold;
+  }
 }
 
 .guideSass__fontSizeExample + .guideSass__fontSizeExample {
