[EuiEmptyPrompt] Add initial guidelines, panel and new props (#5275)
* Initial guidelines

* Added `hasPanel`, `color`, `footer`, `layout` and `panelProps`

* No more `hasPanel` prop. Better padding.

* Better examples, guidelines and top borders instead of shaded colors for colored empty prompts

* Extending `_EuiPanelProps`,  panel `minWidth` and `maxWidth` props. Better examples and styles.

* Correcting some texts

* Renaming images

* Adding responsive styles to horizontal layout.

* Border colors

* Adding example with multiple types of empty states. Better docs.

* Fixing a11y errors. Better examples.

* Added tests

* Added CL

* Added snippets

* Updated playground

* Playground

* Split last “Multiple types” example to replace the entier guide example via the select

* Addressing PR review

* Page template table

* Better responsive styles

* Added borders radius styles when has border is true

* Added missing playground props

* Removed `minWidth` and `maxWidth` props from `EuiPanel`

* CL

* Removed `minWidth` and `maxWidth` playground props

* CL fix

* Fix up playground

* Update cases examples’ copy

* Moved the “Page tempalte” example towards the end

and simplified the table the permissions example in Types

* Passing `color` to the `iconColor` if possible

* Add more context to first example

* Updating Panel example

Making it more generic to panel props and pulling the select out of the example code.

* Update text for custom option

* Moving Layout down and adjusting the text slightly

* Finish editing the last few examples

* CL

* Language updates to Guidelines

* Converting docs pages to TSX

* isNamedColor

Co-authored-by: cchaos <caroline.horn@elastic.co>
Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

--- a/src/components/empty_prompt/_empty_prompt.scss
+++ b/src/components/empty_prompt/_empty_prompt.scss
@@ -1,8 +1,126 @@
 @import '../text/_variables';
 
 .euiEmptyPrompt {
-  max-width: $euiTextConstrainedMaxWidth;
   text-align: center;
-  padding: $euiSizeL;
   margin: auto;
+
+  @include euiBreakpoint('l', 'xl') {
+    max-width: max-content; // the width becomes as wide as necessary to contain all of its contents
+  }
+
+  .euiEmptyPrompt__icon {
+    // Consumers should use an EuiImage (recommended) with the horizontal layout
+    // But they can use for example an img or other react node
+    > * {
+      max-width: convertToRem(360px);
+    }
+  }
+
+  // Footer background colors
+  @each $modifier, $color in $euiPanelBackgroundColorModifiers {
+    @if ($modifier == 'transparent') {
+      &.euiPanel--#{$modifier} {
+        .euiEmptyPrompt__footer {
+          background-color: $euiPageBackgroundColor;
+        }
+
+        &:not(.euiPanel--hasBorder) .euiEmptyPrompt__footer {
+          border-radius: $euiBorderRadius;
+        }
+
+        &.euiPanel--hasBorder .euiEmptyPrompt__footer {
+          border-radius: 0 0 $euiBorderRadius $euiBorderRadius;
+        }
+      }
+    } @else if ($modifier == 'plain') {
+      &.euiPanel--#{$modifier} .euiEmptyPrompt__footer {
+        background-color: $euiPageBackgroundColor;
+        border-radius: 0 0 $euiBorderRadius $euiBorderRadius;
+      }
+    } @else if ($modifier == 'subdued') {
+      &.euiPanel--#{$modifier} .euiEmptyPrompt__footer {
+        border-top: $euiBorderThin;
+        border-radius: 0 0 $euiBorderRadius $euiBorderRadius;
+      }
+    } @else {
+      &.euiPanel--#{$modifier} .euiEmptyPrompt__footer {
+        border-top: 1px solid lightOrDarkTheme(darken($color, 10%), lighten($color, 6%));
+        border-radius: 0 0 $euiBorderRadius $euiBorderRadius;
+      }
+    }
+  }
+}
+
+.euiEmptyPrompt--vertical {
+  .euiEmptyPrompt__main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: $euiSizeXXL * 6;
+  }
+
+  .euiEmptyPrompt__contentInner {
+    max-width: $euiTextConstrainedMaxWidth;
+    margin: auto;
+  }
+
+  .euiEmptyPrompt__icon {
+    margin-bottom: $euiSize;
+  }
+}
+
+.euiEmptyPrompt--horizontal {
+  @include euiBreakpoint('l', 'xl') {
+    justify-content: flex-start;
+    text-align: left;
+  }
+
+  .euiEmptyPrompt__main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include euiBreakpoint('l', 'xl') {
+      flex-direction: row-reverse;
+    }
+  }
+
+  .euiEmptyPrompt__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .euiEmptyPrompt__content {
+    @include euiBreakpoint('l', 'xl') {
+      padding: $euiSizeL 0;
+    }
+  }
+
+  .euiEmptyPrompt__contentInner {
+    max-width: $euiTextConstrainedMaxWidth;
+  }
+
+  .euiEmptyPrompt__icon,
+  .euiEmptyPrompt__content {
+    @include euiBreakpoint('l', 'xl') {
+      width: 50%;
+    }
+  }
+
+  .euiEmptyPrompt__actions {
+    @include euiBreakpoint('l', 'xl') {
+      justify-content: flex-start;
+    }
+  }
+}
+
+// Padding
+@each $modifier, $amount in $euiPanelPaddingModifiers {
+  .euiEmptyPrompt--#{$modifier} {
+    .euiEmptyPrompt__main,
+    .euiEmptyPrompt__footer {
+      padding: $amount;
+    }
+  }
 }
