[Guidelines] Add writing examples page (#4720)
* Adding guideline pages with example

* highlight first submenu

* [DOCS] Fixes errors in copy guidelines

* [DOCS] Fixes formatting errors

* [DOCS] Updates content on toasts

* Add popovers section to examples

* Fix empty prompt action buttons

* [DOCS] Adds content for callouts

* [DOCS] Adds examples for callouts and links

* Tabbed pages

* WIP

* first nav level redirects to first tab page

* first nav level redirects to first tab

* WIP

* Only one writing section

* Improving styles

* No more ID required when creating tabbed page

* Fix nav closing on items lower than 2 levels

- by recursively calling this.renderSubSections and adding the items/isSelected props (isSelected is needed for parents to stay open)

- this potentially allows us to nest to infinite levels if we need it

* Fix not being able to search items lower than 2 levels

- adds a new recursive FN that searches through nested item.titles

* Fix duplicate IDs

- that were causing issues during search

* Update src-docs/src/views/guidelines/writing_examples.js

Co-authored-by: Lisa Cawley <lcawley@elastic.co>

* Update src-docs/src/views/guidelines/writing_examples.js

Co-authored-by: Lisa Cawley <lcawley@elastic.co>

* Update src-docs/src/views/guidelines/writing_examples.js

Co-authored-by: Kelly Murphy <kelly.murphy@elastic.co>

* Replacing EuiFieldNumber with EuiFieldText. Better error text fields.

* Adding meaningful icons

* Highlight top tab when in subsection

* Adding default guide rule

* Panel colors

* Removing unused page

* Removing unused prop types

* Fixed default text color

* Cleaning up some layouts and adding links to respective components

* Fix missing `key`

* Fixing 3rd level highlighing

* Reverting `NEW` badge position

* Searching only 2 levels

* Adding manual sidenav sub-sections

* Improved `GuideTabbedPage` to support `isBeta, 

--- a/src-docs/src/components/guide_rule/_guide_rule_example.scss
+++ b/src-docs/src/components/guide_rule/_guide_rule_example.scss
@@ -10,6 +10,10 @@
   }
 }
 
+.guideRule__example__panelFooter {
+  padding: $euiSize 0;
+}
+
 .guideRule__example--do {
   .guideRule__example__panel {
     border-bottom-color: $euiColorSuccess;
@@ -22,3 +26,8 @@
   }
 }
 
+.guideRule__example--default {
+  .guideRule__example__panel {
+    border-bottom-color: $euiBorderColor;
+  }
+}
